[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleusiq-docs"
version = "0.1.0"
description = "Documentation site for NucleusIQ built with MkDocs"
readme = "documentation/MAINTENANCE.md"
requires-python = ">=3.10"
dependencies = [
  "mkdocs>=1.5,<2",
  "mkdocs-material>=9.0,<10",
]
